<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splash_fragment">

    <fragment
        android:id="@+id/splash_fragment"
        android:name="com.npd.logmein.ui.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splash_fragment_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/splash_fragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_fragment_to_login_fragment"
            app:destination="@id/login_fragment"
            app:popUpTo="@id/splash_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.npd.logmein.ui.login.LoginFragment"
        android:label="@string/fragment_log_in"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_login_fragment_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/login_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.npd.logmein.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.npd.logmein.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.npd.logmein.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>